--- a/_layouts/default.htm
+++ b/_layouts/default.htm
@@ -3,6 +3,7 @@
     <head>
         <title>{{page.title}}</title>
         <link rel="stylesheet" href="/assets/styles.css">
+        <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
     </head>
     <body>
         <header>
