Remove anchor text decoration within grid

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -96,3 +96,8 @@ h1 {
     @extend .article;
     align-self: stretch;
 }
+
+.grid-container a {
+    color: inherit;
+    text-decoration: inherit;
+}
