Add basic blog functionality

--- a/_layouts/post.htm
+++ b/_layouts/post.htm
@@ -11,6 +11,8 @@
         </header>
         <main class="post">
             <article class="article">
+                <header>{{ page.title }}</header>
+                <hr>
                 {{ content }}
             </article>
         </main>
