--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -97,7 +97,7 @@ h1 {
     align-self: stretch;
 }
 
-.grid-container a {
+a {
+    text-decoration: none;
     color: inherit;
-    text-decoration: inherit;
 }
